@@ -1,6 +1,3 @@
-DIST xbmc-12.3-generated-addons.tar.xz 52228 SHA256 477f789dea36969149fe118ecac1c4f3d8c3414772cc6c569be4aefb7e3f221e SHA512 2107271445c0cdcc14b348d011e12ffaaee75bbec506496798f64218256ab9e86cc0ada5edc1e70e509ac1ab366695fae4c15e90bd47fa57ccfe723d7e406b85 WHIRLPOOL 3963577539dee04f33dc4b988944f906688d77864d5e6a6b403e4578c9a91f2b77c256e6b4ed234a9722524c1c3acc626a28ff44c6376c09d93f24008abf54cd
-DIST xbmc-12.3.tar.gz 64615159 SHA256 3e15c960d034efdea5f92a7b74716cb48094842d077b076025fd8640754ede73 SHA512 abe5333f940460a2d40b04a4821f932b44c7605e0d4954e48781317aa25ee04e102b051165842094c5804024c637ca30506773dc3319aba7ab6dbfbe1973ccaa WHIRLPOOL 035cf5792c3c9785eb0a5227406c66298591bafc1251889d4e4a2742ffd715c374c0b6e092f5705db181412de9cae6d1eb3e9c370f3390858b4651f4c135fda1
 DIST xbmc-13.2-generated-addons.tar.xz 34448 SHA256 70603b36b4903b0b14790e30d201101084ae9ab367405f771d739183370605d3 SHA512 eebfc9002712d64b4ccdaef5171b861b2505956bd6fe9f314eaed2fba05b9b8862550f94c684903bc49a522dd0aec0dba32113f0d54f7bcb4b4e810c5f8a768d WHIRLPOOL 0794e9ed0f40249857e814eba15004bfdf020293c4c7571866ae3e34ee39b1fc72c49f02f48cf5b19cb574c1a5d4521cd86eb821fae031172a7d9e4bf52560f8
 DIST xbmc-13.2.tar.gz 65900491 SHA256 acbf5dffa3034a3406240ee3cf81e721386cd383d23d056ddde1f769e050e585 SHA512 83a514410748b05da4c626caff34fec7b6b26a8bdea9f158e1c75721d3a47d36eb1f97ed4c162f6c2472a97f658e3b5285c1e0b144bfb4f654932586eee4d1c8 WHIRLPOOL 54e8551fa8393b9fd1076572e87b4d5a7e1b52acaa0443d14cfc8ed08e69a2efb86e3bb2cbe97d8894989ad7f892f512649165089e3d1035307f8cc820772e6f
 DIST xbmc-9999-20121224-generated-addons.tar.xz 51980 SHA256 21284fe7ccee065eee10064f73a469722d6ffddf2fe882a0aefc07ea0eba0401 SHA512 48cdf8c685a48cd32462509962c888e8bc16254268d6fc891aacc5222da42e227ee5b6858c9e2b80d7d9fecc63862cd0c62c181a106212886a25f9be52778a1f WHIRLPOOL 12a31d33cc322b4afc3bdc829fc330a0971cab8a557a2f87885569d817a3664ae7506bfe7984322ec95b7786a246cd5edb10fceabfd96965ef33dd19cb934ae7
-DIST xbmc_backports-12-1.tar.bz2 5010 SHA256 a222c32f5a4a0a8690b1544674cfbfeddf81943e85b6ea716768b83c9eba5fa8 SHA512 19b29808f7a3a7b0642f8463bdd229041588d2f42952fe55a17ab69b5b259cde249eb763598893463218d0ab6c747bf3c81e045bdbf5655f9f5f2d2067cb35d2 WHIRLPOOL cc6870dabca8b53a1a6055a4218a8f9bbb2c031ab3b928040325fb121ea75ae6db431542660d28c3bc6900a904e2c0949d69651b2f63faffe8bc7f670d519f06
