@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.26 2009/09/05 15:05:52 vapier Exp $
 
+  18 Aug 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  -xbmc-12.3-r1.ebuild:
+  Remove old version.
+
 *xbmc-13.2 (18 Aug 2014)
 
   18 Aug 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
